2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Cryptodisk write support.

	* grub-core/disk/cryptodisk.c (grub_crypto_pcbc_encrypt): New function.
	(grub_cryptodisk_decrypt): Moved logic to ...
	(grub_cryptodisk_endecrypt): ...this. New argument "encrypt".
	(grub_cryptodisk_write): Implement.
	* grub-core/kern/emu/hostdisk.c (nwrite): Rename to ...
	(grub_util_fd_write): ... this. Make global.
	* include/grub/emu/hostdisk.h (grub_util_fd_write): New proto.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (grub_list_remove): Don't crash if element is
	removed twice.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Rename ofconsole to console.

	* grub-core/commands/terminal.c (handle_command): Handle ofconsole
	as sysnonym to console.
	* grub-core/term/ieee1275/ofconsole.c: Renamed to ..
	* grub-core/term/ieee1275/console.c: ... this. All users updated.
	Rename grub_ofconsole_ to grub_console_. All users updated
	(grub_console_term_output): Rename "ofconsole" to "console".
	* grub-core/term/terminfo.c (grub_cmd_terminfo): Handle "ofconsole"
	as "console".

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/pc/plan9.c (grub_cmd_plan9): Remove PXE
	handling.
	* include/grub/disk.h (grub_disk_dev_id): Remove obsolete
	GRUB_DISK_DEVICE_UUID_ID, GRUB_DISK_DEVICE_PXE_ID and
	GRUB_DISK_DEVICE_FILE_ID.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/partition.c (grub_partition_get_name): Simplify logic
	and improve performance.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/openfw.c (grub_ieee1275_encode_devname): Fix
	missing ieee1275/ prefix on whole disk.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/powerpc/ieee1275/util/biosdisk.h: Remove.
	* include/grub/powerpc/ieee1275/biosdisk.h: Likewise.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (handle_symlink): Fix a bug.
